feat: session, optional params

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
 	"include": ["index.js"],
 	"compilerOptions": {
 		"allowJs": true,
+		"esModuleInterop": true,
 		"declaration": true,
 		"emitDeclarationOnly": true,
-		"skipLibCheck": true,
 		"outDir": "typings"
 	}
 }
