--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typings": "npm-run-all typings:*",
+    "typings:clear": "rimraf typings",
+    "typings:compile": "npx tsc"
   },
   "author": "Lewis Cheung",
-  "license": "ISC",
+  "typings": "./typings/index.d.ts",
+  "license": "MIT",
   "dependencies": {
     "node-telegram-bot-api": "^0.61.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.61.7",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   }
 }
