feat: persistent context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
 	"cSpell.words": [
 		"boop",
-		"Conv"
+		"Conv",
+		"inlinekeyboard",
+		"mixedparams",
+		"optionalparams",
+		"persistentcontext",
+		"replykeyboard"
 	]
 }
