--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
 	"cSpell.words": [
 		"boop",
-		"Conv",
+		"Convo",
 		"inlinekeyboard",
 		"mixedparams",
+		"newconvo",
 		"nongroup",
 		"optionalparams",
 		"persistentcontext",
