--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 		"nongroup",
 		"optionalparams",
 		"persistentcontext",
-		"replykeyboard"
+		"replykeyboard",
+		"approver",
+		"approvee"
 	]
 }
