feat: command-auth demo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
 	"cSpell.words": [
+		"approvee",
+		"approver",
 		"boop",
 		"Convo",
 		"inlinekeyboard",
@@ -9,7 +11,6 @@
 		"optionalparams",
 		"persistentcontext",
 		"replykeyboard",
-		"approver",
-		"approvee"
+		"veryimportant"
 	]
 }
